# sagemaker-serverless-inference-benchmarking

./: .gitignore  MANIFEST.in  README.md  invoke_args_examples.jsonl  pyproject.toml
sagemaker_serverless_benchmarking/: __main__.py  analysis.py  benchmark.py  cost_constants.py  endpoint.py  report.py  requirements.txt  sagemaker_runner.py  utils.py
sagemaker_serverless_benchmarking/report_templates/: report_template.html
sample_notebooks/huggingface_pytorch_ner/: huggingface_pytorch_ner_example.ipynb
sample_notebooks/tensorflow_mobilenet_ic/: tf_ic_mobilenet.ipynb
sample_notebooks/tensorflow_mobilenet_ic/cost_analysis_summary_results/: cost_savings_summary.csv  metrics_with_cost.csv
sample_notebooks/xgboost_classification/: xgboost_clf.ipynb  xgbost_clf.ipynb
sm_serverless_benchmarking/: __main__.py  analysis.py  benchmark.py  cost_constants.py  endpoint.py  report.py
sm_serverless_benchmarking/report_templates/: report_template.html
src/sm_serverless_benchmarking/: analysis.py  endpoint.py  report.py  requirements.txt  sagemaker_runner.py  utils.py
